// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`internal ESLint config generator > customizes configure options in the root config 1`] = `
"// THIS FILE IS GENERATED. DO NOT EDIT.

import { join } from 'node:path'

import { createJiti } from 'jiti'

const workspaceRoot = import.meta.dirname
const jiti = createJiti(import.meta.url, {
  alias: {
    '@the-stranger/eslint-config': join(
      workspaceRoot,
      'packages/eslint-config/src/index.ts',
    ),
    '@the-stranger/eslint-config/nx': join(
      workspaceRoot,
      'packages/eslint-config/src/nx.ts',
    ),
    '@the-stranger/eslint-utils': join(
      workspaceRoot,
      'packages/eslint-utils/src/index.ts',
    ),
    '@the-stranger/eslint-plugin': join(
      workspaceRoot,
      'packages/eslint-plugin/src/index.ts',
    ),
  },
  interopDefault: false,
  tsconfigPaths: true,
})

/** @type {import('@the-stranger/eslint-config')} */
const { configure } = await jiti.import('@the-stranger/eslint-config')

/** @type {import('@the-stranger/eslint-utils')} */
const { getFilePatterns, FilePatterns } = await jiti.import(
  '@the-stranger/eslint-utils',
)

/** @type {import('@the-stranger/eslint-plugin')} */
const wsPlugin = await jiti.import('@the-stranger/eslint-plugin')

const configureOptions = {
  "json": false,
  "nx": true,
  "source": {
    "agentSkills": true,
    "js": {
      "browser": false,
      "node": true
    },
    "jsdoc": true,
    "node": true,
    "promise": true,
    "react": {
      "astro": false,
      "typeChecked": false,
      "typescript": false
    },
    "regexp": true,
    "sort": true,
    "ts": {
      "strict": false,
      "typeChecked": true,
      "typescript": true
    },
    "unicorn": true
  },
  "tests": {
    "unitTestRunner": "jest"
  },
  "yaml": {
    "sort": {
      "cspellConfig": true,
      "dependabotConfig": true,
      "githubActions": true,
      "markdownlintConfig": true,
      "yarnrc": true
    }
  }
}

/**
 * Array of file patterns matching JavaScript (but not TypeScript) files.
 * @example *.js, *.mjs
 */
export const JS_FILES = getFilePatterns(FilePatterns.js, '*.{js,mjs,cjs,jsx}')

/**
 * Array of file patterns matching TypeScript (but not JavaScript) files.
 * @example *.ts, *.tsx
 */
export const TS_FILES = getFilePatterns(FilePatterns.ts, '*.{ts,mts,cts,tsx}')

/**
 * Array of file patterns matching test files.
 * @example *.spec.ts, *.test.jsx
 */
export const TEST_FILES = getFilePatterns(FilePatterns.test)

/**
 * Array of file patterns matching all source files.
 */
export const SOURCE_FILES = getFilePatterns(FilePatterns.source)

export const disableTypeChecked = wsPlugin.configs.disableTypeChecked

export default configure(
  configureOptions,

  {
    name: 'the-stranger/source/config-files',
    files: ['eslint.config.*', 'prettier.config.mjs', 'yarn.config.cjs'],
    rules: {
      'perfectionist/sort-objects': 'off',
    },
  },

  {
    name: 'the-stranger/source/typescript-compat',
    files: TS_FILES,
    rules: {
      '@typescript-eslint/prefer-nullish-coalescing': 'off',
      '@typescript-eslint/prefer-optional-chain': 'off',
    },
  },

  { name: 'custom/rules', files: ['**/*.custom.js'], rules: {} },

  {
  "files": [
    "**/*.yxz"
  ],
  "rules": {}
},
)
"
`;

exports[`internal ESLint config generator > generates a project config for the specified project 1`] = `
"// THIS FILE IS GENERATED. DO NOT EDIT.
import { defineConfig } from 'eslint/config'
import * as jsoncParser from 'jsonc-eslint-parser'

import baseConfig from '../../eslint.config.mjs'

export default defineConfig(
  ...baseConfig,

  [object Object],
)
"
`;

exports[`internal ESLint config generator > generates the root config when no project is provided 1`] = `
"// THIS FILE IS GENERATED. DO NOT EDIT.

import { join } from 'node:path'

import { createJiti } from 'jiti'

const workspaceRoot = import.meta.dirname
const jiti = createJiti(import.meta.url, {
  alias: {
    '@the-stranger/eslint-config': join(
      workspaceRoot,
      'packages/eslint-config/src/index.ts',
    ),
    '@the-stranger/eslint-config/nx': join(
      workspaceRoot,
      'packages/eslint-config/src/nx.ts',
    ),
    '@the-stranger/eslint-utils': join(
      workspaceRoot,
      'packages/eslint-utils/src/index.ts',
    ),
    '@the-stranger/eslint-plugin': join(
      workspaceRoot,
      'packages/eslint-plugin/src/index.ts',
    ),
  },
  interopDefault: false,
  tsconfigPaths: true,
})

/** @type {import('@the-stranger/eslint-config')} */
const { configure } = await jiti.import('@the-stranger/eslint-config')

/** @type {import('@the-stranger/eslint-utils')} */
const { getFilePatterns, FilePatterns } = await jiti.import(
  '@the-stranger/eslint-utils',
)

/** @type {import('@the-stranger/eslint-plugin')} */
const wsPlugin = await jiti.import('@the-stranger/eslint-plugin')

const configureOptions = {
  "json": {
    "sort": {
      "nx": true,
      "tsconfig": true,
      "vscode": true
    }
  },
  "nx": true,
  "source": {
    "agentSkills": true,
    "js": {
      "browser": false,
      "node": true
    },
    "jsdoc": true,
    "node": true,
    "promise": true,
    "react": {
      "astro": false,
      "typeChecked": false,
      "typescript": false
    },
    "regexp": true,
    "sort": true,
    "ts": {
      "strict": false,
      "typeChecked": true,
      "typescript": true
    },
    "unicorn": true
  },
  "tests": {
    "disallowedWords": [
      "should"
    ],
    "unitTestRunner": "vitest"
  },
  "yaml": {
    "sort": {
      "cspellConfig": true,
      "dependabotConfig": true,
      "githubActions": true,
      "markdownlintConfig": true,
      "yarnrc": true
    }
  }
}

/**
 * Array of file patterns matching JavaScript (but not TypeScript) files.
 * @example *.js, *.mjs
 */
export const JS_FILES = getFilePatterns(FilePatterns.js, '*.{js,mjs,cjs,jsx}')

/**
 * Array of file patterns matching TypeScript (but not JavaScript) files.
 * @example *.ts, *.tsx
 */
export const TS_FILES = getFilePatterns(FilePatterns.ts, '*.{ts,mts,cts,tsx}')

/**
 * Array of file patterns matching test files.
 * @example *.spec.ts, *.test.jsx
 */
export const TEST_FILES = getFilePatterns(FilePatterns.test)

/**
 * Array of file patterns matching all source files.
 */
export const SOURCE_FILES = getFilePatterns(FilePatterns.source)

export const disableTypeChecked = wsPlugin.configs.disableTypeChecked

export default configure(
  configureOptions,

  {
    name: 'the-stranger/source/config-files',
    files: ['eslint.config.*', 'prettier.config.mjs', 'yarn.config.cjs'],
    rules: {
      'perfectionist/sort-objects': 'off',
    },
  },

  {
    name: 'the-stranger/source/typescript-compat',
    files: TS_FILES,
    rules: {
      '@typescript-eslint/prefer-nullish-coalescing': 'off',
      '@typescript-eslint/prefer-optional-chain': 'off',
    },
  },
)
"
`;
